update launch and front end